# procedural_terrain_generation

./: Cargo.toml  Makefile  README.md  build.rs
shaders/: light_mvm.frag  light_mvm.vert  mvm.frag  mvm.vert  terrain.frag  terrain.vert
src/: main.rs
src/backend/: camera.rs  drawable.rs  gl_gen.rs  mod.rs  object.rs  renderer.rs  shader.rs  texture.rs
src/drawables/: cube.rs  mod.rs  terrain.rs
