[package]
name = "procedural_generation"
version = "0.1.0"
authors = ["thomspoon"]
edition = "2021"
build = "build.rs"

[dependencies]
arrayvec = "^0.7"
bitflags = "^1.2"
glutin = "^0.31.3"
glutin-winit = "0.4.2"
image = "^0.22"
noise = "0.6.0"
raw-window-handle = "0.5"
vek = "^0.9"
winit = { version = "0.29.2", default-features = false, features = ["rwh_05"] }

[build-dependencies]
gl_generator = "^0.13"